@@ -35,8 +35,18 @@
 			<plugin>
 				<groupId>org.fornax.toolsupport</groupId>
 				<artifactId>fornax-oaw-m2-plugin</artifactId>
+				<version>3.3.0</version>
 				<configuration>
-					<workflowDescriptor>src/com/visualligence/g/GenerateVML.mwe2</workflowDescriptor>
+					<workflowDescriptor>com.visualligence.g.GenerateVML</workflowDescriptor>
+					<jvmSettings>
+						<fork>true</fork>
+						<jvmArgs>
+							<jvmArg>-Xms100m</jvmArg>
+							<jvmArg>-Xmx700m</jvmArg>
+							<jvmArg>-XX:MaxPermSize=128m</jvmArg>
+							<jvmArg>-Dlog4j.configuration=file:${basedir}/log4j.properties</jvmArg>
+						</jvmArgs>
+					</jvmSettings>
 				</configuration>
 			</plugin>
 
@@ -78,7 +88,7 @@
 			<plugin>
 				<groupId>org.eclipse.xtend2</groupId>
 				<artifactId>xtend-maven-plugin</artifactId>
-				<version>2.2.0</version>
+				<version>2.2.2</version>
 				<executions>
 					<execution>
 						<goals>
